fix z-index of footer icons in big screen devices

--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -35,6 +35,8 @@ a.github {
   justify-content: center;
   width: 100%;
   max-height: 72px;
+  z-index: 1000;
+  position: relative;
 }
 @media screen and (max-width: 450px) {
   .icons a {
